--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "typescript": "^4.8.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.25.1",
     "@types/jsdom": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-playwright": "^0.11.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "playwright": "^1.25.1"
-  }
+    "eslint-plugin-prettier": "^5.0.0",
+    "playwright": "^1.38.1",
+    "@playwright/test": "^1.38.1",
+    "prettier": "3.0.3"
+  },
+  "repository": "https://github.com/grubmarket-eng/samplee2eTestFramework.git"
 }
